@@ -11,7 +11,10 @@ class TestRDocGeneratorDarkfish < MiniTest::Unit::TestCase
     @lib_dir = "#{@pwd}/lib"
     $LOAD_PATH.unshift @lib_dir # ensure we load from this RDoc
     RDoc::TopLevel.reset
+
     @options = RDoc::Options.new
+    @options.option_parser = OptionParser.new
+    RDoc::Generator::Darkfish.setup_options @options
 
     @tmpdir = File.join Dir.tmpdir, "test_rdoc_generator_darkfish_#{$$}"
     FileUtils.mkdir_p @tmpdir
@@ -50,6 +53,15 @@ class TestRDocGeneratorDarkfish < MiniTest::Unit::TestCase
 
   def refute_file path
     refute File.exist?(path), "#{path} exists"
+  end
+
+  def test_class_setup_options
+    options = RDoc::Options.new
+    options.option_parser = OptionParser.new
+
+    RDoc::Generator::Darkfish.setup_options options
+
+    assert_equal 'UTF-8', options.charset
   end
 
   def test_generate
