@@ -41,6 +41,7 @@
   * RDoc::CodeObjects now know which file they were defined in.
   * RDoc::Options calls ::setup_options on the generator class specified by
     <tt>--format</tt>.  See RDoc::Options::setup_generator.
+  * rdoc gives an error when multiple formats are given.
 * Bug fixes
   * RDoc::Generator tests no longer require any installed RDoc on Ruby 1.9
   * Load existing cache before generating ri.  Ruby r27749 by NAKAMURA Usaku.
@@ -59,8 +60,8 @@
   * uniq ancestors and modules too.  Ruby r29312 by Nobuyoshi Nakada.
   * RDoc now knows about Encoding by default.  Ruby r29356 by Nobuyoshi
     Nakada.
-  * ri now defaults to the backspace formatter when piped.  Ruby r28455 by
-    Yusuke Endoh.
+  * ri now defaults to the backspace formatter when piped.  Use RI environment
+    variable or options to override. Ruby r28455 by Yusuke Endoh.
 
 === 2.5.11 / 2010-08-20
 
